# promptshield

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  promptshield.yml  release.yml
assets/: demo.cast  demo.tape
docs/: demo.tape
src/promptshield/: __init__.py  baseline.py  cli.py  collectors.py  decode.py  report.py  rules.py  rules.yaml  sarif.py  scanner.py
tests/: test_baseline_selfscan.py  test_collectors_comment.py  test_decode.py  test_diff_parse.py  test_rulepacks.py  test_rules.py  test_sarif.py  test_scanner.py  test_string_literal_shadow.py  test_v050.py
tests/fixtures/malicious_pr/: README.md  clean.py  pr_files.json  utils.py
web/: site.json
