[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptshield"
version = "0.5.0"
description = "Scan code your AI coding agent reads, before it obeys hidden prompt-injection instructions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "supermario_leo", email = "leo.stack@outlook.com" }]
keywords = [
    "prompt-injection",
    "security",
    "coding-agent",
    "claude-code",
    "cursor",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1,<9",
    "pyyaml>=6,<7",
    "rich>=13,<14",
]

[project.urls]
Homepage = "https://github.com/SuperMarioYL/promptshield"
Issues = "https://github.com/SuperMarioYL/promptshield/issues"

[project.scripts]
promptshield = "promptshield.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1",
    "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promptshield"]

[tool.hatch.build.targets.wheel.force-include]
"src/promptshield/rules.yaml" = "promptshield/rules.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
